# document_pipeline_mvp

./: README.md  pyproject.toml
data/: sample.md  sample.txt
data/batch_docs/: note.md  plain.txt
document_pipeline/: batch.py  cli.py  detector.py  exporter.py  ocr_processor.py  pipeline.py  publisher.py  text_processor.py
tests/: test_batch.py  test_cli.py  test_detector.py  test_exporter.py  test_ocr_processor.py  test_pipeline.py  test_publisher.py  test_text_processor.py
