[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "document-pipeline-mvp"
version = "0.1.0"
description = "Document Pipeline MVP for routing text and image documents through reusable RADAR utilities."
requires-python = ">=3.11"
readme = "README.md"

[project.optional-dependencies]
dev = [
    "pytest>=8.0"
]

[tool.setuptools.packages.find]
include = ["document_pipeline*"]
exclude = ["data*", "outputs*", "tests*"]

[project.scripts]
doc-pipe = "document_pipeline.cli:main"
